# KERNEL-MIND

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mcp-integration.md  pyproject.toml  release.yml  setup.sh
.github/workflows/: ci.yml  release.yml
KERNEL-CORE/files/: README.md  ci.yml  km.py  lock.py  pyproject.toml  sensor.py  server.py  setup.sh  test_ethics.py  tool.py
KERNEL_MIND_GIT_HUB/: LICENSE  README.md  ci.yml  ethics.md  pyproject.toml  tool.py
KERNEL_MIND_MAIN/: install.py  km.py  memory.py  server.py
config/: defaults.toml
docs/: INSTALL-WINDOWS.md  ethics.md  mcp-integration.md
installer/: installer.py  translations.py
kernelmind/api/: server.py
kernelmind/cli/: km.py
kernelmind/core/: memory.py  sensor.py  storage.py  threat.py
kernelmind/ethics/: lock.py
kernelmind/mcp/: tool.py
tests/: test_api.py  test_cli_mcp.py  test_ethics.py
windows/: README.md  build_kernelmind_app.bat  install_kernelmind_app.ps1  kernelmind_web.py  kernelmind_wrapper.py  requirements.txt  setup_kernelmind.iss
