[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kernelmind"
version = "0.9.1"
description = "IA leve e ética para gestão de kernel em notebooks e computadores"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Daniel Estefani / PoE Ecosystem", email = "poe@armazen-nft.io" }
]
keywords = ["kernel", "system", "monitoring", "AI", "ethics", "PoE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration",
]

dependencies = [
  "psutil>=5.9",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "tomllib; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",   # para testes FastAPI
  "ruff>=0.4",
  "mypy>=1.10",
]
mcp = [
  "mcp>=1.0",
]

[project.scripts]
km = "kernelmind.cli.km:main"
kernelmind = "kernelmind.cli.km:main"
km-api = "kernelmind.api.server:main"
km-mcp = "kernelmind.mcp.tool:main"

[project.urls]
Homepage = "https://github.com/armazen-nft/kernelmind"
Repository = "https://github.com/armazen-nft/kernelmind"
Documentation = "https://github.com/armazen-nft/kernelmind/tree/main/docs"
"Bug Tracker" = "https://github.com/armazen-nft/kernelmind/issues"
"PoE Ecosystem" = "https://proofofenergy.blogspot.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["kernelmind*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["kernelmind"]
omit = ["tests/*"]
