[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelmind"
version = "0.9.1"
description = "Lightweight ethical AI kernel manager — PoE Ecosystem"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Daniel Estefani / PoE Ecosystem", email = "armazen.nft@gmail.com" }]
keywords = ["kernel", "monitoring", "AI", "ethics", "PoE", "MCP"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "psutil>=5.9",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27", "ruff>=0.4"]
mcp = ["mcp>=1.0"]

[project.scripts]
km         = "kernelmind.cli.km:main"
kernelmind = "kernelmind.cli.km:main"
km-api     = "kernelmind.api.server:main"
km-mcp     = "kernelmind.mcp.tool:main"

[project.urls]
Homepage      = "https://github.com/armazen-nft/KERNEL-MIND"
Repository    = "https://github.com/armazen-nft/KERNEL-MIND"
"PoE Ecosystem" = "https://proofofenergy.blogspot.com"

[tool.setuptools.packages.find]
where   = ["."]
include = ["kernelmind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["kernelmind"]
omit   = ["tests/*"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
